Fixed layout issues

--- a/_website-source/css/index.css
+++ b/_website-source/css/index.css
@@ -48,7 +48,7 @@ body {
   }
 }
 
-@media screen and (min-width: 80rem) {
+@media screen and (min-width: 850px) {
   .cv-grid-2 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -1126,7 +1126,7 @@ main {
   align-items: top;
 }
 
-@media screen and (min-width: 80rem) {
+@media screen and (min-width: 850px) {
   .cv-button-add-container {
     grid-template-columns: 1fr auto;
   }
@@ -1294,7 +1294,7 @@ main {
   grid-area: 2 / 1 / 3 / 3;
 }
 
-@media screen and (min-width: 80rem) {
+@media screen and (min-width: 850px) {
   .cv-timeline,
   .cv-timeline li,
   .cv-timeline li h4 {
